tests/cases/standard-library/errors/std-vec-iter-after-reset.ari
fn main() -> i64 {
  var zone = zone::create(64);
  var vec = std::vec::new<i64>(ref mut zone, 1);
  vec.push(7);
  var cursor = vec.iter();
  zone::reset(ref mut zone);
  let value = cursor.next();
  zone::destroy(zone);
  return 0;
}
